fixed form on mobiles

--- a/styles/mediaquery/query.css
+++ b/styles/mediaquery/query.css
@@ -110,6 +110,9 @@
         line-height: 25px;
         font-family: 'Ubuntu', sans-serif;
     }
+    .contact-form__form{
+        padding: 0px 34px;
+    }
 }
 
 @media (min-width: 481px) and (max-width: 768px){
@@ -226,7 +229,9 @@
         line-height: 25px;
         font-family: 'Ubuntu', sans-serif;
     }
-
+    .contact-form__form{
+        padding: 0px 34px;
+    }
 }
 
 @media (min-width: 769px) and (max-width: 1024px){
